k8s/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-container
  template:
    metadata:
      labels:
        app: inventory-container
    spec:
      containers:
      - name: inventory-container
        image: us-central1-docker.pkg.dev/gothic-avenue-470908-m7/onlinestore/maalami/springbootinventory
        ports:
        - containerPort: 8444
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-container
  ports:
    - port: 844
      targetPort: 8444
  type: ClusterIP
